--- a/Twilio.Api.TaskRouter.Net35/Twilio.Api.TaskRouter.Net35.csproj
+++ b/Twilio.Api.TaskRouter.Net35/Twilio.Api.TaskRouter.Net35.csproj
@@ -86,7 +86,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <MSBuildCommunityTasksPath>$(SolutionDir)\.build</MSBuildCommunityTasksPath>
+    <MSBuildCommunityTasksPath>$(SolutionDir).build</MSBuildCommunityTasksPath>
   </PropertyGroup>
   <PropertyGroup>
     <VRevision>0000</VRevision>
