--- a/Twilio.Api.TaskRouter/Twilio.Api.TaskRouter.Net35/Twilio.Api.TaskRouter.Net35.csproj
+++ b/Twilio.Api.TaskRouter/Twilio.Api.TaskRouter.Net35/Twilio.Api.TaskRouter.Net35.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="JWT">
-      <HintPath>..\packages\JWT.1.3.2\lib\3.5\JWT.dll</HintPath>
+      <HintPath>..\..\packages\JWT.1.3.2\lib\3.5\JWT.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
