--- a/Twilio.Api.Monitor/Twilio.Api.Monitor.Net35/Twilio.Api.Monitor.Net35.csproj
+++ b/Twilio.Api.Monitor/Twilio.Api.Monitor.Net35/Twilio.Api.Monitor.Net35.csproj
@@ -72,7 +72,7 @@
   <PropertyGroup>
     <VRevision>0000</VRevision>
   </PropertyGroup>
-  <Import Project="$(MSBuildCommunityTasksTargetPath)\MSBuild.Community.Tasks.Targets" Condition="Exists('$(MSBuildCommunityTasksTargetPath)\MSBuild.Community.Tasks.Targets')" />
+  <Import Project="$(MSBuildCommunityTasksTargetPath)\MSBuild.Community.Tasks.Targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.-->
   <Target Name="BeforeBuild">
