--- a/Twilio.Api.Lookups/Twilio.Api.Lookups.Pcl.Tests/Twilio.Api.Lookups.Pcl.Tests.csproj
+++ b/Twilio.Api.Lookups/Twilio.Api.Lookups.Pcl.Tests/Twilio.Api.Lookups.Pcl.Tests.csproj
@@ -54,7 +54,9 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
-    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http">
+      <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\net40\System.Net.Http.dll</HintPath>
+    </Reference>
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
     </Reference>
