--- a/Twilio.Api.Pricing/Twilio.Api.Pricing.Pcl/Twilio.Api.Pricing.Pcl.csproj
+++ b/Twilio.Api.Pricing/Twilio.Api.Pricing.Pcl/Twilio.Api.Pricing.Pcl.csproj
@@ -100,7 +100,7 @@
     <VRevision>0000</VRevision>
   </PropertyGroup>
   <!--<Import Project="$(MSBuildCommunityTasksPath)\MSBuild.Community.Tasks.Targets" />-->
-  <Import Project="$(MSBuildCommunityTasksTargetPath)\MSBuild.Community.Tasks.Targets" Condition="Exists('$(MSBuildCommunityTasksTargetPath)\MSBuild.Community.Tasks.Targets')" />
+  <Import Project="$(MSBuildCommunityTasksTargetPath)\MSBuild.Community.Tasks.Targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.-->
   <Target Name="BeforeBuild">
