--- a/Twilio.Api.Tests.Performance/Twilio.Api.Tests.Performance.csproj
+++ b/Twilio.Api.Tests.Performance/Twilio.Api.Tests.Performance.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>Twilio.Api.Tests.Performance</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>18c15e4c</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -56,6 +57,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -71,9 +75,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Twilio.Api\Twilio.Api.Net35\Twilio.Api.Net35.csproj">
-      <Project>{894FF9E8-4DBF-4472-8AE2-1A6A988E105B}</Project>
-      <Name>Twilio.Api.Net35</Name>
+    <ProjectReference Include="..\Twilio.Api\Twilio.Api.Pcl\Twilio.Api.Pcl.csproj">
+      <Project>{7d7ae61d-4326-495b-bf94-d54ccc03e127}</Project>
+      <Name>Twilio.Api.Pcl</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
