reset mono version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: csharp
-#mono:
-#  - 3.12.0
+mono:
+  - 3.12.0
 install:
   - nuget restore Twilio.2013.sln
   - nuget install NUnit.Runners -Version 2.6.4 -OutputDirectory testrunner
