--- a/SimpleRestClient/SimpleRestClient.Shared/SimpleRestClient.Shared.csproj
+++ b/SimpleRestClient/SimpleRestClient.Shared/SimpleRestClient.Shared.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="JsonDeserializer\DeserializeAsAttribute.cs" />
     <Compile Include="JsonDeserializer\JsonDeserializer.cs" />
     <Compile Include="JsonDeserializer\SimpleJson.cs" />
